# yaddd

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  tests-unit.yml
src/yaddd/domain/value_object/: __init__.py  base.py  base_types.py  registry.py
src/yaddd/domain/value_object/json/: __init__.py  encode.py
src/yaddd/domain/value_object/pydantic/: __init__.py  common.py  main.py
src/yaddd/domain/value_object/sqlalchemy/: __init__.py  type_decorator.py
src/yaddd/shared/: specification.py
tests/unit/: test_specification.py
tests/unit/value_object/: test_main.py  test_registry.py
tests/unit/value_object/pydantic/: test_pydantic_base_types.py  test_pydantic_main.py  test_vo.py  test_vo_base_types.py  test_vo_meta.py
